Fix selecting container when an error occur and it has been closed